# icotable

./: Cargo.toml  DEGENERACY.md  README.md
benches/: locate.rs
examples/: lookup.rs
src/: adaptive.rs  flat.rs  ico.rs  icosphere.rs  icotable.rs  lib.rs  lookup.rs  mesh.rs  orient.rs  spherical.rs  table.rs  vertex.rs
src/subdivision/: geodesic.rs  lattice.rs  mod.rs
tests/data/: lattice_cpp_n2.txt  lattice_cpp_n4.txt  lattice_cpp_n8.txt
